--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* .google-sans-flex-<uniquifier> {
+  font-family: "Google Sans Flex", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0,
+    "wdth" 100,
+    "GRAD" 0,
+    "ROND" 0;
+} */
+
+html, body, #root {
+    font-family: 'Google Sans Flex', sans-serif;
+}
